fix table alignment

--- a/web/page.css
+++ b/web/page.css
@@ -1,8 +1,10 @@
 body {
+    --bg: rgb(250 250 250);
+    
     padding: 0;
     margin: 0;
     font-family: sans-serif;
-    background-color: rgb(250 250 250);
+    background-color: var(--bg);
 }
 
 .comp-table {
@@ -27,6 +29,7 @@ body {
     row-gap: .8em;
     flex-flow: column;
     justify-content: end;
+    align-items: center;
 }
 
 .comp-table-name-text {
@@ -51,6 +54,9 @@ body {
 .comp-table-cell {
     padding-right: var(--col-gap);
     border-bottom: var(--row-border) solid var(--border-color);
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 .comp-table-cell-content {
